--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "dayjs": "^1.11.13",
     "firebase": "^11.8.1",
     "govbr-ds-angular": "^0.0.2",
+    "jquery": "^3.7.1",
     "ng2-charts": "^8.0.0",
     "ngx-mask": "^19.0.6",
     "ngx-skeleton-loader": "^11.0.0",
+    "pdfjs-dist": "^5.4.149",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -43,6 +45,7 @@
     "@angular/compiler-cli": "^19.2.13",
     "@types/jasmine": "~5.1.0",
     "@types/jest": "^29.5.14",
+    "@types/pdfjs-dist": "^2.10.377",
     "angular-cli-ghpages": "^2.0.3",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
